hphp/hack/test/typecheck/reactive/returns_void_to_rx4.php.exp
File "returns_void_to_rx4.php", line 9, characters 7-7:
Class B does not correctly implement all required members  (Typing[4246])
File "returns_void_to_rx4.php", line 9, characters 17-17:
Some members are incompatible with those declared in type A
Read the following to see why:
File "returns_void_to_rx4.php", line 12, characters 19-19:
Member f has the wrong type
File "returns_void_to_rx4.php", line 12, characters 19-19:
This is marked <<__ReturnsVoidToRx>>.
File "returns_void_to_rx4.php", line 4, characters 19-19:
This is not marked <<__ReturnsVoidToRx>>.
